crates/canvas-cli/tests/snapshots/review_m8a__m8a_conversation_json.snap
---
source: crates/canvas-cli/tests/review_m8a.rs
expression: "normalized(one, &server.uri())"
---
{
  "exit": 0,
  "freshness": [
    {
      "complete": true,
      "count": 1,
      "dataset": "conversation",
      "fetched_at": "2026-09-09T17:05:12Z",
      "scope": "conversation:700",
      "source": "network",
      "stale": false
    }
  ],
  "generated_at": "<generated_at>",
  "identity": {
    "key": "fixture",
    "origin": "https://canvas.test",
    "user_id": "123"
  },
  "outcome": "ok",
  "partial": [],
  "profile": null,
  "requests": {
    "api": 1,
    "cost": null,
    "storage": 0
  },
  "result": {
    "conversation": {
      "context_name": "CHEM-101",
      "id": "700",
      "last_message_at": "2026-09-09T12:00:00Z",
      "messages": [
        {
          "attachments": [
            {
              "file_id": "42",
              "name": "notes.pdf",
              "size": 20480
            }
          ],
          "author_id": "31",
          "body": "Can we meet before the lab?",
          "created_at": "2026-09-09T12:00:00Z",
          "id": "9001",
          "truncated": false
        }
      ],
      "messages_complete": true,
      "participants": [
        {
          "id": "123",
          "name": "You"
        },
        {
          "id": "31",
          "name": "Alex Kim"
        }
      ],
      "subject": "Conversation 700",
      "workflow_state": "unread"
    },
    "pending": false,
    "pending_journals": []
  },
  "schema": "canvas-cli/conversation@1",
  "warnings": []
}
