crates/canvas-cli/tests/snapshots/review_m8a__m8a_discussion_json.snap
---
source: crates/canvas-cli/tests/review_m8a.rs
expression: "normalized(out, &server.uri())"
---
{
  "exit": 0,
  "freshness": [
    {
      "complete": true,
      "count": 1,
      "dataset": "discussion",
      "fetched_at": "2026-09-09T17:05:12Z",
      "scope": "topic:55:replies",
      "source": "network",
      "stale": false
    }
  ],
  "generated_at": "<generated_at>",
  "identity": {
    "key": "fixture",
    "origin": "https://canvas.test",
    "user_id": "123"
  },
  "outcome": "ok",
  "partial": [],
  "profile": null,
  "requests": {
    "api": 4,
    "cost": null,
    "storage": 0
  },
  "result": {
    "discussion": {
      "assignment_id": null,
      "author": "Dr. Reed",
      "course_id": "5",
      "discussion_type": "threaded",
      "embedded": [],
      "external_links": [],
      "files": [],
      "group_category_id": null,
      "group_topic_children": [],
      "html_url": "https://canvas.test/courses/5/discussion_topics/55",
      "id": "55",
      "is_announcement": false,
      "last_reply_at": "2026-09-08T10:00:00Z",
      "locked": false,
      "message_markdown": "What surprised you?",
      "pinned": false,
      "points_possible": null,
      "posted_at": "2026-09-01T14:00:00Z",
      "read_state": "unread",
      "replies": [
        {
          "created_at": "2026-09-02T09:00:00Z",
          "id": "900",
          "message_markdown": "Reply 1.",
          "parent_id": null,
          "read_state": "unread",
          "replies_count": 0,
          "truncated": false,
          "user_id": "31",
          "user_name": "Student 1"
        },
        {
          "created_at": "2026-09-02T09:00:00Z",
          "id": "901",
          "message_markdown": "Reply 2.",
          "parent_id": null,
          "read_state": "unread",
          "replies_count": 0,
          "truncated": false,
          "user_id": "32",
          "user_name": "Student 2"
        },
        {
          "created_at": "2026-09-02T09:00:00Z",
          "id": "902",
          "message_markdown": "Reply 3.",
          "parent_id": null,
          "read_state": "unread",
          "replies_count": 0,
          "truncated": false,
          "user_id": "33",
          "user_name": "Student 3"
        }
      ],
      "replies_coverage": {
        "blocked": null,
        "complete": true,
        "pages_fetched": 2
      },
      "replies_page": 1,
      "replies_total": 3,
      "reply_count": 3,
      "require_initial_post": false,
      "title": "Topic 55",
      "truncated": false,
      "unread_count": 2
    }
  },
  "schema": "canvas-cli/discussion@1",
  "warnings": []
}
