crates/canvas-cli/tests/snapshots/review_m8a__m8a_discussions_table.snap
---
source: crates/canvas-cli/tests/review_m8a.rs
expression: "scrub_text(&f.text(&[\"discussions\", \"5\"], 0).await, &server.uri())"
---
  ID    TITLE                 LAST REPLY              REPLIES    UNREAD    STATE   
  55    Topic 55              2026-09-08T10:00:00Z    3          2         unread  
  56    Introduce yourself    2026-09-08T10:00:00Z    3          2         unread  
  57    Group lab report      2026-09-08T10:00:00Z    3          2         unread  
  60    Welcome               2026-09-08T10:00:00Z    3          2         unread
