crates/canvas-cli/tests/snapshots/review_m8a__m8a_inbox_json.snap
---
source: crates/canvas-cli/tests/review_m8a.rs
expression: "normalized(listing, &server.uri())"
---
{
  "exit": 0,
  "freshness": [
    {
      "complete": true,
      "count": 3,
      "dataset": "inbox",
      "fetched_at": "2026-09-09T17:05:12Z",
      "scope": "scope:inbox",
      "source": "network",
      "stale": false
    }
  ],
  "generated_at": "<generated_at>",
  "identity": {
    "key": "fixture",
    "origin": "https://canvas.test",
    "user_id": "123"
  },
  "outcome": "ok",
  "partial": [],
  "profile": null,
  "requests": {
    "api": 2,
    "cost": null,
    "storage": 0
  },
  "result": {
    "conversations": [
      {
        "context_name": "CHEM-101",
        "id": "700",
        "last_message_at": "2026-09-09T12:00:00Z",
        "message_count": 2,
        "participants": [
          {
            "id": "123",
            "name": "You"
          },
          {
            "id": "31",
            "name": "Alex Kim"
          }
        ],
        "starred": false,
        "subject": "Conversation 700",
        "workflow_state": "unread"
      },
      {
        "context_name": "CHEM-101",
        "id": "701",
        "last_message_at": "2026-09-09T12:00:00Z",
        "message_count": 2,
        "participants": [
          {
            "id": "123",
            "name": "You"
          },
          {
            "id": "31",
            "name": "Alex Kim"
          }
        ],
        "starred": false,
        "subject": "Conversation 701",
        "workflow_state": "unread"
      },
      {
        "context_name": "CHEM-101",
        "id": "702",
        "last_message_at": "2026-09-09T12:00:00Z",
        "message_count": 2,
        "participants": [
          {
            "id": "123",
            "name": "You"
          },
          {
            "id": "31",
            "name": "Alex Kim"
          }
        ],
        "starred": false,
        "subject": "Conversation 702",
        "workflow_state": "unread"
      }
    ],
    "listing": {
      "available": true,
      "http_status": null
    },
    "pending": false,
    "pending_journals": [],
    "scope": "inbox"
  },
  "schema": "canvas-cli/inbox@1",
  "warnings": []
}
