crates/canvas-cli/tests/snapshots/review_m8a__m8a_inbox_unread_json.snap
---
source: crates/canvas-cli/tests/review_m8a.rs
expression: "normalized(count, &server.uri())"
---
{
  "exit": 0,
  "freshness": [
    {
      "complete": true,
      "count": 1,
      "dataset": "inbox_unread",
      "fetched_at": "2026-09-09T17:05:12Z",
      "scope": "all",
      "source": "network",
      "stale": false
    }
  ],
  "generated_at": "<generated_at>",
  "identity": {
    "key": "fixture",
    "origin": "https://canvas.test",
    "user_id": "123"
  },
  "outcome": "ok",
  "partial": [],
  "profile": null,
  "requests": {
    "api": 1,
    "cost": null,
    "storage": 0
  },
  "result": {
    "unread_count": 2
  },
  "schema": "canvas-cli/inbox_unread@1",
  "warnings": []
}
