crates/canvas-cli/tests/snapshots/review_m8a__m8a_inbox_unread_table.snap
---
source: crates/canvas-cli/tests/review_m8a.rs
expression: "scrub_text(&f.text(&[\"inbox\", \"unread-count\"], 0).await, &server.uri())"
---
2
