crates/canvas-cli/tests/snapshots/review_m8a__m8a_page_table.snap
---
source: crates/canvas-cli/tests/review_m8a.rs
expression: "scrub_text(&f.text(&[\"page\", \"5\", \"course-overview\"], 0).await, &server.uri())"
---
Page 301
https://canvas.test/courses/5/pages/course-overview
updated 2026-09-01T14:00:00Z

Read the [handbook](<origin>/courses/5/files/42).

Also [these notes](https://elsewhere.test/notes).

[embedded iframe: unavailable to this tool]

[embedded lti: unavailable to this tool]
embedded iframe (https://player.test): unavailable
embedded lti (same origin): unavailable
file 42 handbook
external https://elsewhere.test/notes
